@@ -1,5 +1,5 @@
 pkglib_LTLIBRARIES = HwAnalysis.la HwLEPAnalysis.la HwDecayAnalysis.la HwBSMAnalysis.la
-HwAnalysis_la_LDFLAGS = -module -version-info 3:0:0 $(CLHEPLDFLAGS)
+HwAnalysis_la_LDFLAGS = -module -version-info 3:1:0 $(CLHEPLDFLAGS)
 HwAnalysis_la_CPPFLAGS = $(AM_CPPFLAGS) $(CLHEPINCLUDE)
 HwAnalysis_la_LIBADD = $(CLHEPLIB)
 HwAnalysis_la_SOURCES = \
